--- a/src/documents/index.html
+++ b/src/documents/index.html
@@ -1,32 +1,107 @@
---- yaml
-layout: 'default'
-title: 'Home'
----
+<!DOCTYPE html> 
+<!--
+  copyright (c) 2011 Google inc.
 
-<!-- Main hero unit for a primary marketing message or call to action -->
-<div class="hero-unit">
-	<h1>Welcome to your new site!</h1>
-	<p>
-		We've copied over the
-			<a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>
-			<a href="https://github.com/balupton/bootstrap.docpad">Skeleton</a>
-		for you already, which is what you're currently viewing.
+  You are free to copy and use this sample.
+  License can be found here: http://code.google.com/apis/ajaxsearch/faq/#license
 
-		Step through the guide below and we'll walk you through the process of working with your first docpad website :-)
-	</p>
-	<p><a class="btn primary large" href="/pages/getting-started.html">Get started &raquo;</a></p>
-</div>
+-->
+<html> 
+<head> 
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no" /> 
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"/> 
 
-<!-- Example row of columns -->
-<div class="row" style="text-align:center;">
-	<div class="span8">
-		<h2>Docpad</h2>
-		<p>DocPad (like Jekyll) is a static website generator, unlike Jekyll it's written in CoffeeScript+Node.js instead of Ruby, and also allows the template engine complete access to the document model. This means you have unlimited power as a CMS and the simplicity of a notepad.</p>
-		<p><a class="btn" href="https://github.com/balupton/docpad">Visit Website</a></p>
-	</div>
-	<div class="span8">
-		<h2>Twitter Bootstrap</h2>
-		<p>Bootstrap is a toolkit from Twitter designed to kickstart development of webapps and sites. It includes base CSS and HTML for typography, forms, buttons, tables, grids, navigation, and more.</p>
-		<p><a class="btn" href="http://twitter.github.com/bootstrap/">Visit Website</a></p>
-	</div>
-</div>
+<title>Google Maps JavaScript API v3 Example: Fusion Tables Layer</title> 
+
+<style>
+  body { font-family: Arial, sans-serif; }
+  #map_canvas { height: 600px; width:850px; }
+</style>
+
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
+<script type="text/javascript" id="script">
+var layer;
+var tableid =  2008866;
+var center = new google.maps.LatLng(42, -72);
+var zoom = 8;
+var map;
+var geocoder = new google.maps.Geocoder();
+
+function initialize() {
+
+  // Initialize the map
+  map = new google.maps.Map(document.getElementById('map_canvas'), {
+    center: center,
+    zoom: zoom,
+    mapTypeId: google.maps.MapTypeId.ROADMAP
+  });
+  
+  // Initialize the layer
+  layer = new google.maps.FusionTablesLayer({
+    query: {
+      select: 'lat',
+      from: tableid
+    },
+    map: map
+  });
+}
+
+function zoomtoaddress() {
+
+  // Use the geocoder to geocode the address
+  geocoder.geocode( { 'address': document.getElementById("address").value }, function(results, status) {
+    // If the status of the geocode is OK
+    if (status == google.maps.GeocoderStatus.OK) {
+      // Change the center and zoom of the map
+      map.setCenter(results[0].geometry.location);
+      map.setZoom(11);
+      
+      // OPTIONAL: find the new map bounds, and run a spatial query to return
+      // Fusion Tables results within those bounds. 
+      sw = map.getBounds().getSouthWest();
+      ne = map.getBounds().getNorthEast();
+      layer.setOptions({
+        query: {
+          select: 'lat',
+          from: tableid,
+          where: "ST_INTERSECTS(lat, RECTANGLE(LATLNG(" + sw.lat() + "," + sw.lng() + "), LATLNG(" + ne.lat() + "," + ne.lng() + ")))"
+        }
+      });
+    } 
+  });
+}
+
+// Reset the zoom, center, and FusionTablesLayer query
+function reset() {
+  map.setCenter(center);
+  map.setZoom(zoom);
+  layer.setOptions({
+    query: {
+      select: 'lat',
+      from: tableid
+    }
+  });
+}
+
+// Register Enter key press to submit form
+window.onkeypress = enterSubmit;
+function enterSubmit() {
+  if(event.keyCode==13) {
+    zoomtoaddress();
+  }
+}
+
+</script> 
+</head> 
+<body onload="initialize();"> 
+
+
+Enter an address: <input type="text" id="address" />
+<input type="button" onclick="zoomtoaddress()" value="Search!" />
+<input type="button" onclick="reset()" value="Reset" />
+<div id="map_canvas"></div>
+
+</body> 
+</html> 
+
+
